<?xml version="1.0" encoding="utf-8"?>
<menu 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jmlb0003.prueba3.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_description"
        android:orderInCategory="20"
        android:title="@string/action_description"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="30"
        android:title="@string/action_about"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />
</menu>