<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pi_details_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >
    
    <FrameLayout 
        android:id="@+id/pi_image_layout2"
        android:clickable="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@color/md_blue_100" >
        
        <ImageView 
	        android:id="@+id/pi_image_container2"
	        android:visibility="invisible"
	        android:contentDescription="@string/pi_content_description"
	        android:clickable="true"
	        android:layout_width="200dp"
	        android:layout_height="200dp"
	        android:layout_marginBottom="8dp"
	        android:layout_gravity="center"
	        android:background="@color/md_blue_100" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        
    </FrameLayout>
    
    
    <LinearLayout
        android:id="@+id/name_container2"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/pi_image_layout2"
        android:background="@color/blue" >
        <TextView 
            android:text="@string/pi_name"
            android:textSize="16sp"
            android:textColor="@color/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
        <TextView 
            android:id="@+id/pi_name2"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <TextView 
            android:text="@string/pi_distance"
            android:textSize="16sp"
            android:textColor="@color/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <TextView 
            android:id="@+id/pi_distance2"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/description_container2"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/name_container2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/green" >
        <TextView 
            android:text="@string/pi_description"
            android:textSize="16sp"
            android:textColor="@color/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
        <TextView 
            android:id="@+id/pi_description2"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    

</RelativeLayout>
